# MonitorPlacement

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  Makefile  benchmark.sh  coverage-rate  coverage-rate-025  coverage-rate-05  coverage-rate-10  coverage-rate-dis15  coverage-rate-dis5  coverage-rate-jitter  coverage-rate-random  parser  test
data/: LOD3_1.gml  Road-LOD0.gml  untitled.blend1
include/: camera.h  camera_chooser.h  echo.h  echo.hpp  parser.h  print.h  utils.h  world.h
include/models/: voxel.h
include/sampler/: sampler.h
include/voxelizer/: mesh.h  voxelizer.h
src/: camera.cpp  camera_chooser.cpp  echo.cpp  main.cpp  parser.cpp  print.cpp  test.cpp  world.cpp
src/sampler/: sampler.cpp
src/voxelizer/: mesh.cpp  voxelizer.cpp
test/: camera.cpp  parser.cpp
test/sampler/: sampler.cpp
